--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rotating-navigation",
+  "name": "blurry-loading-page",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
